update kotlin to 2.1.0, fleks to 2.10.0, coroutines to 1.9.0